--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
   />
-    <title>React App</title>
+    <title>Партали МК</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
